syntax = "proto3";

package auth;

service AuthService {
  rpc Login(LoginRequest) returns (TokenResponse);
  rpc Register(RegisterRequest) returns (TokenResponse);
}

message LoginRequest {
  string username = 1;
  string password = 2;
}

message RegisterRequest {
  string username = 1;
  string password = 2;
}

message TokenResponse {
  string message = 1;
  string access_token = 2;
}